kubernetes/app/kevinnitrohomelab/blog/cnpg/allow-blog.authorizationpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: cnpg-allow-blog
spec:
  selector:
    matchLabels:
      cnpg.io/cluster: cnpg-blog
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/egolia-blog/sa/blog
              - cluster.local/ns/cnpg-system/sa/cnpg-cloudnative-pg
